@@ -69,7 +69,11 @@ include_once('include/page_header.php');
 
 
 	if(!$bulk){
-		$options = array('extendoutput' => 1, 'select_triggers' => 1, 'eventids' => $_REQUEST['eventid']);
+		$options = array(
+			'extendoutput' => 1, 
+			'select_triggers' => 1, 
+			'eventids' => $_REQUEST['eventid']
+		);
 		$events = CEvent::get($options);
 		$event = reset($events);
 		$event_trigger = reset($event['triggers']);
@@ -82,10 +86,21 @@ include_once('include/page_header.php');
 		if($bulk){
 			$_REQUEST['message'] .= ($_REQUEST['message'] == '' ? '' : "\n\r") . S_SYS_BULK_ACKNOWLEDGE;
 		}
+		
+		if(isset($_REQUEST['events'])){
+			$_REQUEST['events'] = zbx_toObject($_REQUEST['events'], 'eventid');
+		}
+		else if(isset($_REQUEST['triggers'])){
+			$options = array(
+				'output' => API_OUTPUT_SHORTEN, 
+				'acknowledged' => 0,
+				'triggerids' => $_REQUEST['triggers']
+			);
+			$_REQUEST['events'] = CEvent::get($options);
+		}
 
 		$events_data = array(
-			'events' => zbx_toObject($_REQUEST['events'], 'eventid'),
-			'triggers' => zbx_toObject($_REQUEST['triggers'], 'triggerid'),
+			'events' => $_REQUEST['events'],
 			'message' => $_REQUEST['message']);
 		$result = CEvent::acknowledge($events_data);
 
